# TransparentMirror

./: CMakeLists.txt  distance_measurer.cu  distance_measurer.h  feature_point_extractor.cpp  feature_point_extractor.h  icp.cpp  icp.h  kinect2_grabber.cpp  kinect2_grabber.h  lgf_corresp_group.cpp  lgf_corresp_group.h  lgf_estimator.cpp  lgf_estimator.h  local_geometric_feature.cpp  local_geometric_feature.h  main.cpp  readme.md  segmentor.cpp  segmentor.h
Models/: cup.stl  model_features.lgf  model_features_template.lgf  scene - bottle_red-1.stl  scene - cup_green-1.stl  scene - cup_pink-1.stl  scene - cup_purple-1.stl  scene - desk-1.stl  scene.blend  scene.scn  scene_1.pcd  scene_2.pcd  scene_3.pcd  scene_4_no_occlusion.pcd  table_tutorial_color.dae
cuda/: feature_point_extractor.cu  feature_point_extractor.h  utils.cu  utils.h
gui/: log_window.cpp  log_window.h  main_window.cpp  main_window.h  vtk_kinect.cpp  vtk_kinect.h  vtk_model.cpp  vtk_model.h  vtk_segment.cpp  vtk_segment.h
thread/: thread_capture.cpp  thread_capture.h  thread_recognition.cpp  thread_recognition.h
